# MonoNN

./: CMakeLists.txt  LICENSE  README.md  main.cpp  mnn.h
src/: CMakeLists.txt  activations.cpp  forprop.cpp  layer.cpp  loss.cpp  mnn.cpp  mnn2d.cpp  mononn.hpp  operators.cpp  weights.cpp
src/clkernel/: activations.cl  kernels.cpp
src/cppfunc/: activations.cpp  backBatch.cpp  backSingle.cpp  forproplayer.cpp  loss.cpp  operators.cpp  setweights.cpp  updateweights.cpp
src/cukernel/: activations.cu  device_functions.cuh
src/evaluation/: confusion.cpp  stats.cpp
src/files/: accessbin.cpp  image.cpp
src/include/: activations.hpp  clcon.hpp  cppop.hpp  cusup.hpp  dmnn1d.hpp  dmnn2d.hpp  lmnn1d.hpp  lmnn2d.hpp  loss.hpp  mnn.hpp  mnn1d.hpp  mnn2d.hpp  operators.hpp  progress.hpp
src/mnn/: access.cpp  accessbin.cpp  activations.cpp  batchTrain.cpp  confusion.cpp  epoch.cpp  fullsetTrain.cpp  image.cpp  layer.cpp  loss.cpp  mnn.cpp  mnn1d.cpp  mnn2d.cpp  multiply.cpp  onlineTrain.cpp  operators.cpp  preTrain.cpp  progress.cpp  schedLr.cpp  setweights.cpp  stats.cpp  test.cpp  train.cpp  updateweights.cpp  weights.cpp
src/mnn/cl/: activations.cl  clBackBatch.cpp  clBufTrainBatch.cpp  clBuftrain.cpp  clForpropb.cpp  clTrain1c.cpp  clTrainBatch1c.cpp  clbackprop.cpp  clforprop.cpp  cltrain.cpp  forprop.cl  kernel.cl  kernels.cpp  operators.cl  trainOnBuf1.cpp  trainOnBuf2.cpp
src/mnn/cpp/: back1.cpp  backBatch.cpp  backOnline.cpp  backSingle.cpp  backbatch.cpp  backprop.cpp  backproplayer.cpp  forprop.cpp  forproplayer.cpp  layer.cpp  operators.cpp  threadTrain.cpp  train.cpp  train1c.cpp  trainBatch1c.cpp  trainOnThreads1.cpp  trainOnThreads2.cpp
src/mnn/cu/: activations.cu  backBatch.cu  backprop.cu  device_functions.cuh  forprop.cu  forpropb.cu  forward.cu  kernel.cu  operators.cu  train.cu  train1c.cu  trainBatch1c.cu  trainOnBuf1.cu  trainOnBuf2.cu
src/mnn/evaluation/: confusion.cpp  epoch.cpp  progress.cpp  session.cpp  stats.cpp
src/mnn/train/: batchTrain.cpp  fullsetTrain.cpp  onlineTrain.cpp
src/mnn/trainNtest/: batchTrain.cpp  fullsetTrain.cpp  onlineTrain.cpp  postTrain.cpp  preTrain.cpp  test.cpp  testOnAll.cpp  trainNtest.cpp
src/nets/mnn1d/: mnn1d.cpp
src/nets/mnn1d/cl/: clBackBatch.cpp  clForpropb.cpp  clTrain1c.cpp  clTrainBatch1c.cpp  clbackprop.cpp  clforprop.cpp  cltrain.cpp  trainOnBuf1.cpp  trainOnBuf2.cpp
src/nets/mnn1d/cpp/: backprop.cpp  forprop.cpp  train.cpp  train1c.cpp  trainBatch1c.cpp  trainOnThreads.cpp
src/nets/mnn1d/cu/: backBatch.cu  backprop.cu  forprop.cu  forpropb.cu  train.cu  train1c.cu  trainBatch1c.cu  trainOnBuf1.cu  trainOnBuf2.cu
src/nets/mnn1d/trainNtest/: batchTrain.cpp  fullsetTrain.cpp  onlineTrain.cpp  postTrain.cpp  preTrain.cpp  test.cpp  testOnAll.cpp  trainNtest.cpp
src/nets/mnn2d/: mnn2d.cpp
src/nets/mnn2d/cl/: clBackBatch.cpp  clForpropb.cpp  clTrain1c.cpp  clTrainBatch1c.cpp  clbackprop.cpp  clforprop.cpp  cltrain.cpp  trainOnBuf1.cpp  trainOnBuf2.cpp
src/nets/mnn2d/cpp/: backprop.cpp  forprop.cpp  train.cpp  train1c.cpp  trainBatch1c.cpp  trainOnThreads.cpp
src/nets/mnn2d/cu/: backBatch.cu  backprop.cu  forprop.cu  forpropb.cu  train.cu  train1c.cu  trainBatch1c.cu  trainOnBuf1.cu  trainOnBuf2.cu
src/nets/mnn2d/trainNtest/: batchTrain.cpp  fullsetTrain.cpp  onlineTrain.cpp  postTrain.cpp  preTrain.cpp  test.cpp  testOnAll.cpp  trainNtest.cpp
