cmake_minimum_required(VERSION 3.30.0 FATAL_ERROR)
project(monoNN)
set(VERSION 0.0.1)
message("> Project Name: ${PROJECT_NAME} | Version: ${VERSION}")
message("> Experimental Implementation of Monomial Neural Network")

# backend for computations
set(USE_CL ON)
set(USE_CU OFF)
set(USE_CPU OFF)

# binaries for debug and release
set(OSbit 32)
if(CMAKE_SIZEOF_VOID_P EQUAL 8)
    set(OSbit 64)
    message("> Running on ${CMAKE_SYSTEM_NAME}-${CMAKE_SYSTEM_PROCESSOR}-${OSbit}-bit System")
endif()
set(FullOutputDir "${CMAKE_SOURCE_DIR}/bin/${CMAKE_SYSTEM_NAME}-${CMAKE_SYSTEM_PROCESSOR}-${OSbit}/${CMAKE_BUILD_TYPE}")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${FullOutputDir}/static_libs")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${FullOutputDir}")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${FullOutputDir}")
add_compile_definitions(MONO_NN_SRC_DIR="${CMAKE_SOURCE_DIR}")

# language settings
set(LANGUAGES C CXX
    if(USE_CU)
        CUDA
    endif()
)
enable_language(C CXX)
set(CMAKE_C_STANDARD 17)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

find_package(OpenCV REQUIRED)
if(OpenCV_FOUND)
    message(STATUS "Found OpenCV version ${OpenCV_VERSION}")
    include_directories(${OpenCV_INCLUDE_DIRS})
else()
    message(FATAL_ERROR "OpenCV not found. Please install OpenCV or set OpenCV_DIR.")
endif()

# set compile definitions
if(USE_CU)
    find_package(CUDAToolkit REQUIRED)
    message(STATUS "Found CUDA version ${CUDAToolkit_VERSION}")
    message(STATUS "Using CUDA for compilation.")
    message(STATUS "Using CUDA for better operations on CUDA-based GPUs:)")
    enable_language(CUDA)
    if(LINUX)
        set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -static-libstdc++")
    endif()
    set(CMAKE_CUDA_STANDARD 20)
    set(CMAKE_CUDA_STANDARD_REQUIRED ON)
    set(MY_CUDA_ARCH "86" CACHE STRING "Target CUDA Architecture(s) e.g., 75, 86, 90")
    set(CMAKE_CUDA_ARCHITECTURES ${MY_CUDA_ARCH})
    add_compile_definitions(USE_CU)
    include_directories(${CUDAToolkit_INCLUDE_DIRS})
    if(MSVC)
        set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>DLL")
    endif()
elseif(USE_CL)
    set(OpenCL_CL_VERSION "300")
    set(CL_TARGET_OPENCL_VERSION "300")
    find_package(OpenCL REQUIRED)
    message(STATUS "Found OpenCL version ${OpenCL_CL_VERSION}")
    message(STATUS "Using OpenCL for compilation.")
    message(STATUS "Using OpenCL for better flexibility on non-Nvidia CL-conformant and Nvidia GPUs:)")
    include_directories(${OpenCL_INCLUDE_DIRS})
    add_compile_definitions(USE_CL)
else()
    message(STATUS "OpenCL and CUDA not found or not using:(")
    message(STATUS "Using C++ on CPU for operations:)")
    add_compile_definitions(USE_CPU)
endif()

add_subdirectory(src)
include_directories(src)
add_executable(${PROJECT_NAME} main.cpp mnn.h)
target_link_libraries(${PROJECT_NAME} PRIVATE mono)

if(USE_CU)
    target_link_libraries(${PROJECT_NAME} PRIVATE CUDA::cudart)
elseif(USE_CL)
    target_link_libraries(${PROJECT_NAME} PRIVATE OpenCL::OpenCL)
endif()